feat: add API to create shortlink
