# docs/swagger.json
@@ -12,6 +12,63 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/links": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Authenticated users can transform a long destination URL into a clean, short link. If custom slug is omitted, the system will auto-generate a random unique identifier.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Link Management"
+                ],
+                "summary": "Create a new short link",
+                "parameters": [
+                    {
+                        "description": "Create Link Payload (destination URL and optional custom slug)",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateLinkReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Shortlink created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response-dto_LinkDetailRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request - Validation error, reserved keyword used, or duplicate slug",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - Token missing or invalid signature",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error - Invalid token payload context format",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/login": {
             "post": {
                 "description": "Authenticate user with email and password to get a JWT token",
@@ -106,6 +163,20 @@
         }
     },
     "definitions": {
+        "dto.CreateLinkReq": {
+            "type": "object",
+            "required": [
+                "original_url"
+            ],
+            "properties": {
+                "original_url": {
+                    "type": "string"
+                },
+                "slug": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -116,6 +187,29 @@
                     "type": "boolean"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.LinkDetailRes": {
+            "type": "object",
+            "properties": {
+                "click_count": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "original_url": {
+                    "type": "string"
+                },
+                "short_url": {
+                    "type": "string"
+                },
+                "slug": {
                     "type": "string"
                 }
             }
@@ -189,6 +283,20 @@
                 },
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.Response-dto_LinkDetailRes": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.LinkDetailRes"
+                },
+                "isSucces": {
+                    "type": "boolean"
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         },
